added stocks in stock object

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ include(cmake/App.cmake)
 
 set(SOURCES "src/MyApp.h"
             "src/MyApp.cpp"
-            "src/main.cpp")
+            "src/main.cpp"
+            "src/stock.cpp")
 
 add_app("${SOURCES}")
