New PathUtil class, rm findPathFromApp() in MyApp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,7 @@ set(SOURCES "src/MyApp.h"
             "src/Calendar.cpp"
             "src/Purchase.cpp"
             "src/Portfolio.cpp"
-            )
+            "src/PathUtil.cpp")
 
 # Create the executable target
 add_app("${SOURCES}")
