--- a/.github/workflows/codecov.yaml
+++ b/.github/workflows/codecov.yaml
@@ -29,7 +29,7 @@ jobs:
         run: cd src
 
       - name: Run tests
-        run: ./runTests.sh
+        run: g++ PortfolioTester.cpp Stock.cpp Portfolio.cpp Calendar.cpp Headline.cpp Purchase.cpp testPortfolioApp.cpp PathUtil.cpp -o tester && ./tester
 
       - name: Move back to build directory
         run: cd ../build/
