--- a/.github/workflows/codecov.yaml
+++ b/.github/workflows/codecov.yaml
@@ -25,12 +25,9 @@ jobs:
       - name: Run build
         run: ./build.sh
 
-      - name: Move into src directory
-        run: cd src
-
       - name: Run tests
-        run: g++ PortfolioTester.cpp Stock.cpp Portfolio.cpp Calendar.cpp Headline.cpp Purchase.cpp testPortfolioApp.cpp PathUtil.cpp -o tester && ./tester
-
+        run: ./test.sh
+      
       - name: Move back to build directory
         run: cd ../build/
 
