--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,11 @@ project(MyApp C CXX)
 include(cmake/App.cmake)
 
 
+set(CMAKE_CXX_FLAGS "--coverage")
+set(CMAKE_C_FLAGS "--coverage")
+set(CMAKE_EXE_LINKER_FLAGS "--coverage")
+
+
 set(SOURCES "src/MyApp.h"
             "src/MyApp.cpp"
             "src/main.cpp"
@@ -18,3 +23,6 @@ set(SOURCES "src/MyApp.h"
 # Create the executable target
 add_app("${SOURCES}")
 
+# Find Catch2 package
+find_package(Catch2 REQUIRED)
+target_link_libraries(MyApp PRIVATE Catch2::Catch2)
