--- a/.github/workflows/codecov.yaml
+++ b/.github/workflows/codecov.yaml
@@ -35,6 +35,8 @@ jobs:
           # had to comment out the ignore below
           # lcov --remove coverage.info '/usr/*' '*/lib/Catch2/src/*' --output-file coverage.info
       - name: Upload coverage reports to Codecov
-          uses: codecov/codecov-action@v3
-          env:
-            CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+        uses: codecov/codecov-action@v1
+        with:
+            file: ./build/coverage.info
+          #env:
+          #  CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
