feat: game resets when 100 years is reached, reset button in main menu

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,8 @@ set(SOURCES "src/MyApp.h"
             "src/Purchase.cpp"
             "src/Portfolio.cpp"
             "src/PathUtil.cpp"
-            "src/College.cpp")
+            "src/College.cpp"
+            "src/GameFunctions.cpp")
 
 # Create the executable target
 add_app("${SOURCES}")
